Upgrade to Ruthless 0.8.0, Java 17 & Gradle 8.4 (#30)
Closes #28